--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://chirag-bansal07.github.io/Embryo-task__website/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +13,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "set PORT= 3000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
